Refactor for improving null checks and nullable types
Other changes:
- Add service layer between controllers and JPA repositories
- Implement better exception and error handling
- Refactor some model classes into records
- Add more input validation in REST controllers
- Simplify validation for token requests from user